# linked-data-rs

./: Cargo.toml
.github/workflows/: ci.yml
derive/: Cargo.toml
derive/src/: generate.rs  lib.rs
derive/src/generate/: de.rs  ser.rs  ser_sparql.rs
derive/src/generate/de/: enum.rs  struct.rs
derive/src/generate/ser/: enum.rs  struct.rs
derive/src/generate/ser_sparql/: struct.rs
examples/: derive.rs  derive_enum.rs  derive_hashset.rs  derive_sparql.rs  deserialize.rs  deserialize_from_triples.rs  generics.rs  graph.rs
src/: anonymous.rs  graph.rs  lib.rs  macros.rs  predicate.rs  quads.rs  rdf.rs  rdf_list.rs  reference.rs  resource.rs  sparql.rs  subject.rs
src/datatypes/: de.rs  ser.rs
src/impl/rdf_types/: dataset_graph_view.rs  dataset_view.rs
src/sparql/: domain.rs  interpretation.rs
