[package]
name = "linked-data-next-derive"
description = "Derive macros for the `linked-data` crate"
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = "2"
proc-macro2 = "1"
quote = "1"
proc-macro-error = "1"
thiserror.workspace = true
iref.workspace = true
static-iref.workspace = true
